# haskell-intro-2024

./: 01-hello-world.hs  01-hello-world.md  01.md  02-newton.hs  02-newton.md  02.md  03-1-lists.hs  03-1.md  03-2.md  03-4-maybe.hs  03-5-either.hs  03-quicksort.hs  03.md  04-2-file-io.hs  04-tuples.hs  04-user-defined-data-types.hs  04.md  05-1.hs  05-2-std-io.hs  05-3-file-io.hs  05-3-lists.hs  05-playing-cards.hs  05.md  06-io.hs  07-monadic-io.hs  NN.md  README.md
02-newton-final/: 02-newton.hs
06-stockquotes/: stockquotes.cabal
